containers/kubernetes/pusher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pusher
  namespace: nrocinu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pusher
  template:
    metadata:
      labels:
        app: pusher
    spec:
      containers:
        - name: pusher
          image: registry.optirec.ml/pusher:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
