containers/kubernetes/pusher/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pusher
    namespace: nrocinu
spec:
    selector:
        app: pusher
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: http
