containers/kubernetes/pusher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pusher
    namespace: nrocinu
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 5G
        nginx.ingress.kubernetes.io/proxy-read-timeout: 3600s
        nginx.ingress.kubernetes.io/proxy-send-timeout: 3600s
        nginx.ingress.kubernetes.io/server-snippets: |
            location / {
                proxy_set_header Upgrade $http_upgrade;
                proxy_http_version 1.1;
                proxy_set_header X-Forwarded-Host $http_host;
                proxy_set_header X-Forwarded-Proto $scheme;
                proxy_set_header X-Forwarded-For $remote_addr;
                proxy_set_header Host $host;
                proxy_set_header Connection "upgrade";
                proxy_cache_bypass $http_upgrade;
            }

spec:
    ingressClassName: public
    rules:
        - host: pusher.optirec.ml
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: pusher
                            port:
                                number: 80
    tls:
        - secretName: tls-secret
